# generic_trainer

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
examples/: classification.py  classification_huggingface_accelerate.py  classification_pytorch_lightning.py  dataset_handle.py  image_regression.py
examples/hpc/: ddp_training_with_dummy_data.py  submit_polaris.sh
generic_trainer/: __init__.py  compat.py  configs.py  data.py  inference_util.py  message_logger.py  metrics.py  tester.py  trainer.py  util.py
tests/: test_all.py  test_all_examples.py
