[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "generic_trainer"
authors = [
    {name = ""},
]
description = "Generic trainer"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "torch",
    "torchvision",
    "torchinfo",
    "scikit-learn",
]
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.optional-dependencies]
inference = ["tensorrt == 8.6.1"]
